--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="./static/js/jquery-3.3.1.min.js"></script>
     <title>丫贝试客商家中心</title>
   </head>
   <body>
